<resources>
    <string name="app_name">QingQiQiu</string>
    <string name="welcome_skip">跳过(%d)</string>

    <string-array name="tabcontent">
        <item>攻略</item>
        <item>游记</item>
        <item>行程单</item>
        <item>我的</item>
    </string-array>
    <string name="strategy_location_failed">定位失败</string>
    <string name="travelnote_recommend">推荐</string>
    <string name="travelnote_name">姓名</string>
    <string name="travelnote_come">来自</string>
    <string name="travelnote_him">关注他</string>
    <string name="travelnote_title">标题</string>
    <string name="travelnote_praise">点赞</string>
    <string name="travelnote_comment">评论</string>
    <string name="travelnote_collect">收藏</string>
    <string name="travelnote_more">更多</string>
    <string name="travelnote_platform">氢大V</string>
    <string name="travelnote_label">标签</string>

    <string name="strategy_histroy_tag">最近想去</string>
    <string name="strategy_nearby_destination">附近目的地</string>
    <string name="strategy_nearby_destination_more">更多附近目的地</string>
    <string name="strategy_nearby_note">附近旅行灵感</string>

    <string name="onekey_trip">如何一键生成行程</string>
    <string name="my_trip">我的游记</string>
    <string name="community">社区</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_order">我的携程订单</string>
    <string name="other">其他</string>
    <string name="feedback">意见反馈</string>
    <string name="setting">设置</string>
    <string name="travelnote_popup_share">分享</string>
    <string name="travelnote_popup_recommend">推荐给粉丝</string>
    <string name="loading_id">携程注册邮箱或手机号码</string>
    <string name="loading_psw">密码</string>
    <string name="loading_load">登  录</string>
    <string name="loading_no_id">没有携程账号？</string>
    <string name="loading_register">在此注册</string>
    <string name="loading_forget_psw">忘记密码</string>
    <string name="custom_title">登录界面标题</string>
</resources>
