<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/travelnote_content_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launch"/>
        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/travelnote_content_name"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:gravity="center_vertical"
                android:text="@string/travelnote_name"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/travelnote_come"/>
                <TextView
                    android:id="@+id/travelnote_content_platform"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/travelnote_platform"
                    android:textSize="14sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textColor="#2DC9D7"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/travelnote_recommend"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/travelnote_content_attention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:text="@string/travelnote_him"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/travelnote_content_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launch"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:id="@+id/travelnote_content_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/travelnote_content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:text="@string/travelnote_title"/>
    <TextView
        android:id="@+id/travelnote_content_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:text="content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c7c7c7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/travelnote_content_praise"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/travelnote_praise"/>
        <TextView
            android:id="@+id/travelnote_content_comment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/travelnote_comment"/>
        <TextView
            android:id="@+id/travelnote_content_collect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/travelnote_collect"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/travelnote_content_more"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/travelnote_more"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#c7c7c7"/>

</LinearLayout>